修改首页header背景

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,16 @@
                   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
               <![endif]-->
 
-        <header class="home-header" style="background-image: url('{{ site.baseurl }}/assets/home/header_background.png')">
-            
-                <h1 class="home-title">P E R S O N A L   P L O G</h1>
-            
+        <header class="home-header" style="background-image: url('{{ site.baseurl }}/assets/home/header_background.png');height: 800px;">
+            <div>
+                <h1 class="home-title">P E R S O N A L   B L O G</h1>
+            </div>
+            <div>
+                <h1 class="home-blog-title">薛定谔的<img class="home-water" src="{{ site.baseurl }}/assets/home/water.png"  alt="水滴"/>货</h1>  
+            </div>
         </header>
         <div>
             {{ content }}
-            </div>
+        </div>
     </body>
 </html>
