--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,10 +1,28 @@
-
 .home-header {
     background-size: cover;
-    // height: 800px;
+    height: 800px;
 }
+
+.home-water {
+    height: 58px;
+    width: 58px;
+    vertical-align: middle;
+}
+
+// .home-center {
+//     margin:auto;
+// }
 
 .home-title {
     color: white;
     font-size: 36px;
+    text-align: center;
+    padding-top: 400px;
+}
+
+.home-blog-title {
+    color: white;
+    font-size: 48px;
+    text-align: center;
+    vertical-align: middle;
 }
