--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -26,3 +26,9 @@
     text-align: center;
     vertical-align: middle;
 }
+
+.home-post-icon {
+    fill:#B1A7A7;
+    stroke-width:1;
+    stroke:#B1A7A7;
+}
