--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,10 @@
                     icons[i].style.stroke = color;
                 } 
             }
+           
+            window.onload=function(){
+                ran_col();
+            }
         </script>
-
-        <button type="button" onclick="ran_col()">点击这里</button>
-
     </body>
 </html>
