--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -29,6 +29,6 @@
 
 .home-post-icon {
     fill:#B1A7A7;
-    stroke-width:1;
-    stroke:#B1A7A7;
+    // stroke-width:1;
+    // stroke:#B1A7A7;
 }
