--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,34 +1,20 @@
 .feat {
     text-align: center;
-    border-bottom: 1px dotted red;
-    margin: 0 auto 3.5em;
-    a.popup {
-      display: inline-block;
-      position: relative;
-      top: .7em;
-      background: #fff;
-      font-size: 130%;
-      text-align: center;
-      text-decoration: none;
-      padding: 0 3.5em;
-      transition: all .2s ease;
-      -webkit-transition: all .2s ease;
-      @media (max-width: 642px) {
-        font-size: 150%;
-      }
-    }
+    border-bottom: 1px solid #979797;
+    margin: 0 64px 3.5em;
   }
 
   .page-date {
+    color: #6A4E64;
     display: inline-block;
     position: relative;
-    top: 1.1em;
-    background: blue;
-    font-size: 85%;
+    top: 2.35em;
+    background: white;
+    font-size: 32px;
     text-align: center;
     font-weight: normal;
-    font-style: italic;
-    padding: 0 3.5em;
+    // font-style: italic;
+    padding: 0 1em;
     text-transform: none;
     letter-spacing: 1px;
   }
