--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -13,8 +13,12 @@
     font-size: 32px;
     text-align: center;
     font-weight: normal;
-    // font-style: italic;
     padding: 0 1em;
     text-transform: none;
     letter-spacing: 1px;
   }
+
+.page-content {
+  padding-left: 100px;
+  padding-right: 100px;
+}
