--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,4 +9,12 @@ layout: default
         </time>
     </h5>
 </div>
-{{ content }}
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="120">
+    <polyline points="50,70 200,70"
+    style="fill:#725B21;stroke:#725B21;stroke-width:1" />
+    <polyline points="73,48 73,131"
+    style="fill:#725B21;stroke:#725B21;stroke-width:1" />
+</svg>
+<div class="page-content">
+    {{ content }}
+</div>
