--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -21,4 +21,12 @@
 .page-content {
   padding-left: 100px;
   padding-right: 100px;
+
+  p {
+    font-size: 24px;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    color: #614321;
+  }
 }
