--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -22,11 +22,61 @@
   padding-left: 100px;
   padding-right: 100px;
 
-  p {
+  body {
     font-size: 24px;
   }
-  
-  h1, h2, h3, h4, h5, h6 {
+
+  p {
+    font-size: 24px;
+    font-family: PingFangSC-Regular, sans-serif;
+  }
+
+  h1 {
     color: #614321;
+    font-family: PingFangSC-Regular, sans-serif;
+    font-size: 3em; 
+  }
+  
+  h2 {
+    color: #614321;
+    font-family: PingFangSC-Regular, sans-serif;
+    font-size: 2em; 
+  }
+  
+  h3 {
+    color: #614321;
+    font-family: PingFangSC-Regular, sans-serif;
+    font-size: 1.5em; 
+  }
+  
+  h4 {
+    color: #614321;
+    font-family: PingFangSC-Regular, sans-serif;
+    font-size: 1.125em; 
+  }
+  
+  h5 {
+    color: #614321;
+    font-family: PingFangSC-Regular, sans-serif;
+    font-size: .875em; 
+  }
+  
+  h6 {
+    color: #614321;
+    font-family: PingFangSC-Regular, sans-serif;
+    font-size: .75em; 
+  }
+
+  ol {
+    font-size: 1em;
+  }
+
+  ul {
+    font-size: 1em;
+  }
+  
+  li {
+    font-size: 1em;
+    line-height: 150%;
   }
 }
