--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -32,3 +32,9 @@
     // stroke-width:1;
     // stroke:#B1A7A7;
 }
+
+.home-link {
+    color: black;
+    font-size: 36px;
+    text-decoration: none;
+}
