--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,6 @@ layout: default
     <polyline points="73,48 73,131"
     style="fill:#725B21;stroke:#725B21;stroke-width:1" />
 </svg>
-<div class="page-content">
+<!-- <div class="page-content"> -->
     {{ content }}
-</div>
+<!-- </div> -->
