--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <link rel="stylesheet" href="/assets/css/main.css">
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/syntax.css">
+        <link rel="stylesheet" href="/assets/css/syntax.css">
     </head>
     <body>
         <!--[if lt IE 7]>
