--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -22,65 +22,65 @@
   padding-left: 100px;
   padding-right: 100px;
 
-  body {
-    font-size: 24px;
-  }
+  // body {
+  //   font-size: 24px;
+  // }
 
-  div {
-    font-size: 24px;
-  }
+  // div {
+  //   font-size: 24px;
+  // }
 
-  p {
-    font-size: 24px;
-    font-family: PingFangSC-Regular, sans-serif;
-  }
+  // p {
+  //   font-size: 24px;
+  //   font-family: PingFangSC-Regular, sans-serif;
+  // }
 
-  h1 {
-    color: #614321;
-    font-family: PingFangSC-Regular, sans-serif;
-    font-size: 3*24px; 
-  }
+  // h1 {
+  //   color: #614321;
+  //   font-family: PingFangSC-Regular, sans-serif;
+  //   font-size: 3*24px; 
+  // }
   
-  h2 {
-    color: #614321;
-    font-family: PingFangSC-Regular, sans-serif;
-    font-size: 2*24px; 
-  }
+  // h2 {
+  //   color: #614321;
+  //   font-family: PingFangSC-Regular, sans-serif;
+  //   font-size: 2*24px; 
+  // }
   
-  h3 {
-    color: #614321;
-    font-family: PingFangSC-Regular, sans-serif;
-    font-size: 1.5*24px; 
-  }
+  // h3 {
+  //   color: #614321;
+  //   font-family: PingFangSC-Regular, sans-serif;
+  //   font-size: 1.5*24px; 
+  // }
   
-  h4 {
-    color: #614321;
-    font-family: PingFangSC-Regular, sans-serif;
-    font-size: 1.125*24px; 
-  }
+  // h4 {
+  //   color: #614321;
+  //   font-family: PingFangSC-Regular, sans-serif;
+  //   font-size: 1.125*24px; 
+  // }
   
-  h5 {
-    color: #614321;
-    font-family: PingFangSC-Regular, sans-serif;
-    font-size: .875*24px; 
-  }
+  // h5 {
+  //   color: #614321;
+  //   font-family: PingFangSC-Regular, sans-serif;
+  //   font-size: .875*24px; 
+  // }
   
-  h6 {
-    color: #614321;
-    font-family: PingFangSC-Regular, sans-serif;
-    font-size: .75*24px; 
-  }
+  // h6 {
+  //   color: #614321;
+  //   font-family: PingFangSC-Regular, sans-serif;
+  //   font-size: .75*24px; 
+  // }
 
-  ol {
-    font-size: 24px;
-  }
+  // ol {
+  //   font-size: 24px;
+  // }
 
-  ul {
-    font-size: 24px;
-  }
+  // ul {
+  //   font-size: 24px;
+  // }
   
-  li {
-    font-size: 24px;
-    line-height: 150%;
-  }
+  // li {
+  //   font-size: 24px;
+  //   line-height: 150%;
+  // }
 }
