--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -1,5 +1,8 @@
+// body { height: 100%; padding: 0; margin: 0; }
+// .outer { height: 100%; padding: 100px 0 0; box-sizing: border-box ; position: relative; }
+// .home-header { height: 800px; background: #BBE8F2; position: absolute; top: 0 ; left: 0 ; width: 100%; }
+
 .home-header {
-    background-size: cover;
     height: 800px;
 }
 
