--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -4,83 +4,202 @@
     margin: 0 64px 3.5em;
   }
 
-  .page-date {
+.page-date {
     color: #6A4E64;
     display: inline-block;
     position: relative;
     top: 2.35em;
     background: white;
-    font-size: 32px;
+    font-size: 22px;
     text-align: center;
     font-weight: normal;
     padding: 0 1em;
     text-transform: none;
     letter-spacing: 1px;
-  }
-
-.page-content {
-  padding-left: 100px;
-  padding-right: 100px;
-
-  // body {
-  //   font-size: 24px;
-  // }
-
-  // div {
-  //   font-size: 24px;
-  // }
-
-  // p {
-  //   font-size: 24px;
-  //   font-family: PingFangSC-Regular, sans-serif;
-  // }
-
-  // h1 {
-  //   color: #614321;
-  //   font-family: PingFangSC-Regular, sans-serif;
-  //   font-size: 3*24px; 
-  // }
-  
-  // h2 {
-  //   color: #614321;
-  //   font-family: PingFangSC-Regular, sans-serif;
-  //   font-size: 2*24px; 
-  // }
-  
-  // h3 {
-  //   color: #614321;
-  //   font-family: PingFangSC-Regular, sans-serif;
-  //   font-size: 1.5*24px; 
-  // }
-  
-  // h4 {
-  //   color: #614321;
-  //   font-family: PingFangSC-Regular, sans-serif;
-  //   font-size: 1.125*24px; 
-  // }
-  
-  // h5 {
-  //   color: #614321;
-  //   font-family: PingFangSC-Regular, sans-serif;
-  //   font-size: .875*24px; 
-  // }
-  
-  // h6 {
-  //   color: #614321;
-  //   font-family: PingFangSC-Regular, sans-serif;
-  //   font-size: .75*24px; 
-  // }
-
-  // ol {
-  //   font-size: 24px;
-  // }
-
-  // ul {
-  //   font-size: 24px;
-  // }
-  
-  // li {
-  //   font-size: 24px;
-  //   line-height: 150%;
-  // }
 }
+* {
+    box-sizing: border-box;
+}
+
+/* reset CSS */
+table {	
+    font-size: 100%;
+}
+/* end reset CSS */
+
+body {
+    font-family:"lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+    font-size: 18px;
+}
+
+body.mobile {
+    font-size: 30px;
+}
+
+P, li {
+  line-height: 1.8;
+}
+
+H1 {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+}
+
+H2 {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    margin-bottom: 60px;
+    margin-bottom: 40px;
+    padding: 5px;
+    border-bottom: 2px LightGrey solid;
+    width: 98%;
+    line-height: 150%;
+    color: #666666;
+}
+
+
+H3 {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    border-bottom: 1px LightGrey solid;
+    width: 98%;
+    line-height: 150%;
+    color: #666666;
+}
+
+
+H4 {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    border-bottom: 1px LightGrey solid;
+    width: 98%;
+    line-height: 150%;
+    color: #666666;
+}
+
+.box {
+    padding: 2% 8% 5% 8%;
+    border: 1px solid LightGrey;
+}
+
+
+li {
+    margin-left: 10px;
+}
+
+
+blockquote {
+    border-left: 5px lightgrey solid;
+    padding-left: 15px;
+    margin-left: 20px;
+    background: #f4f4f4;
+}
+
+
+pre {
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
+    font-size: 80%;
+    background-color: #F4F4F4;
+    border: 1px solid #E0E0E0;
+    border-radius: 4px;
+    padding: 5px;   
+    line-height: 1.3;
+
+    display: block;
+    width: 100%;
+    overflow: auto;
+}
+
+
+code {
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
+}
+
+
+a {
+    text-decoration: none;
+    cursor: crosshair;
+    border-bottom: 1px dashed orange;
+    color: #930ee4;
+}
+
+
+a:hover {
+    background-color: LightGrey;
+}
+
+
+img {
+    display: block;
+    box-shadow: 0 0 10px #555;
+    border-radius: 6px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    -webkit-box-shadow: 0 0 10px #555;
+}
+
+img.displayed {
+    text-align: center;
+    display: block;
+}
+
+hr {
+    color: LightGrey;
+}
+
+p.notice {
+    color: #AA4433;
+    font-size: 14px;
+}
+
+div.tweet p {
+    font-size: 16px;
+    border: 1px solid #aaa;
+    border-left: 10px solid #f28500;
+    padding: 2px 0.5em 2px 0.5em;
+    margin-bottom: 20px;
+    background-color: #fbfbfb;
+}
+
+div.tweet i {
+    color: brown;
+    font-size: 14px;
+    font-style: normal;
+    border: 1px solid #aaa;
+    margin-right: 0.5em;
+    padding: 0px 2px;
+}
+
+div.outer {
+    margin: 2% 5% 2% 5%;
+}
+
+body.mobile div.outer {
+    margin: 2% 0% 2% 0%;
+}
+
+div.inner {
+    margin: 0% 6%;
+    padding: 2% 8% 4% 8%; 
+    /* border: 1px solid LightGrey; */
+}
+
+body.mobile div.inner {
+    margin: 0;
+    padding: 2% 4% 4% 4%;
+}
+
+div.ad-banner {
+    margin: 0% 14%;
+}
+
+body.mobile div.ad-banner {
+    margin: 0;
+}
+
+.side-ad.mobile {
+    display: none;
+}
+
