--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <link rel="stylesheet" href="/assets/css/main.css">
+        <script src="/assets/js/home.js"></script>
         <link rel="stylesheet" href="/assets/css/syntax.css">
     </head>
     <body>
