add: old blog paper

--- a/themes/schrodingerscat/layouts/index.html
+++ b/themes/schrodingerscat/layouts/index.html
@@ -10,7 +10,7 @@
 <div>
     <div class="home-list">
         <ul>
-           {{ range .Site.AllPages }}
+           {{ range .Site.RegularPages }}
            <li style="list-style-type:none;" class="home-post-list">
                <a href="{{ .RelPermalink }}" class="home-link">
                    <span class="home-post-icon"></span>
