--- a/themes/schrodingerscat/layouts/_default/baseof.html
+++ b/themes/schrodingerscat/layouts/_default/baseof.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    {{- partial "head.html" . -}}
+    {{ partial "head.html" . }}
     <body>
-        {{- partial "header.html" . -}}
+        {{ partial "header.html" . }}
         <div id="content">
-        {{- block "main" . }}{{- end }}
+            {{ block "main" . }}{{ end }}
         </div>
-        {{- partial "footer.html" . -}}
-        {{- partial "script.html" . -}}
+        {{ partial "footer.html" . }}
+        {{ partial "script.html" . }}
     </body>
 </html>
