--- a/themes/schrodingerscat/layouts/partials/header.html
+++ b/themes/schrodingerscat/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header class="home-header">
     <div class="home-header-inner">
-        <h1 class="home-blog-title">薛定谔的<img class="home-water" src="home/water.png"  alt="水"/>货</h1>
+        <h1 class="home-blog-title">薛定谔的水货</h1>
     </div>
 </header>
