--- a/themes/schrodingerscat/layouts/partials/header.html
+++ b/themes/schrodingerscat/layouts/partials/header.html
@@ -1,5 +1,8 @@
 <header class="home-header">
     <div class="home-header-inner">
         <h1 class="home-blog-title">薛定谔的水货</h1>
+        <a href="{{ .Site.BaseURL }}" class="home-button">
+            <i class="fas fa-home"></i>
+        </a>
     </div>
 </header>
